--- a/home/index.html
+++ b/home/index.html
@@ -1,11 +1,12 @@
 <html>
 <head>
-<title>Page Title</title>
+<title>WEBPROG IT241</title>
 </head>
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<h1>My First WEBPROG Heading</h1>
+<p>Hello World!</p>
+<p> I saw my cat this morning. </p>
 
 </body>
 </html>
