Add image to index.html

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ IT Experience<br>
 Hobbies & Interests<br>
 Goals In Life / Dream<br>
 Picture Gallery<br>
+ <img src="https://i.pinimg.com/736x/6b/f5/ab/6bf5ab23b3ae97d323d12d572baf6777.jpg" alt="Girl with a jacket" width="500" height="600">
 </p>
  
  
