--- a/Introduction/index.html
+++ b/Introduction/index.html
@@ -10,11 +10,11 @@
  
 About Me<br>
 ( Do not include birthdate / age / contact information)<br>
-Education / Achievements<br>
-Course <br>
+Education / Achievements: With honors<br>
+Course: BSIT <br>
 IT Experience<br>
-Hobbies & Interests<br>
-Goals In Life / Dream<br>
+Hobbies & Interests: Guitar, drawing and singing<br>
+Goals In Life / Dream: To become successful<br>
 Picture Gallery<br>
  <img src="https://i.pinimg.com/736x/6b/f5/ab/6bf5ab23b3ae97d323d12d572baf6777.jpg" alt="Girl with a jacket" width="300" height="400">
 </p>
