Revise HTML for Personal Profile Web Page
Updated the HTML structure and styling of the personal profile page.

--- a/Introduction/index.html
+++ b/Introduction/index.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+  <title>Personal Profile Web Page</title>
 </head>
-<body>
- 
-<h1>Personal Profile Web Page</h1>
+<body bgcolor="#b3e0f2">
+  
+  <h1><font color="#000080">Personal Profile Web Page</font></h1>
 
   <p>
-    <strong>About Me</strong><br>
+    <b>About Me</b><br>
     I’m a fun and easygoing person who really enjoys having real, face-to-face conversations with the people closest to me, no phones or gadgets needed! I love deep talks with my family and friends, especially when we share thoughts about the Gospel or even just random everyday stuff. Those moments feel so meaningful, and afterward, it’s like a huge weight has been lifted off my shoulders.<br><br>
 
     I also love traveling, sipping coffee while enjoying a beautiful view, playing guitar, singing, and drawing. Right now, I’m trying to learn how to dance too! Music is a big part of my life, it keeps me inspired and happy.<br><br>
 
-    <strong>Education / Achievements:</strong> I’ve been a consistent honors student from Junior High School all the way through Senior High School. Right now, I’m in my second year of college, pursuing a Bachelor of Science in Information Technology (BSIT)<br><br>
+    <b>Education / Achievements:</b> I’ve been a consistent honors student from Junior High School all the way through Senior High School. Right now, I’m in my second year of college, pursuing a Bachelor of Science in Information Technology (BSIT)<br><br>
 
-    <strong>Course:</strong> Bachelor of Science in Information Technology<br><br>
+    <b>Course:</b> Bachelor of Science in Information Technology<br><br>
 
-    <strong>IT Experience:</strong> As a student, I’ve already started building hands-on experience through class projects, like creating simple websites, basic applications, and troubleshooting software issues. I’ve also joined tech-related school activities and workshops to grow my skills in programming, networking, and problem-solving.<br><br>
+    <b>IT Experience:</b> As a student, I’ve already started building hands-on experience through class projects, like creating simple websites, basic applications, and troubleshooting software issues. I’ve also joined tech-related school activities and workshops to grow my skills in programming, networking, and problem-solving.<br><br>
 
-    <strong>Hobbies & Interests:</strong> Guitar, drawing and singing<br><br>
+    <b>Hobbies & Interests:</b> Guitar, drawing and singing<br><br>
 
-    <strong>Goals In Life / Dream:</strong> My dream is to become successful, not just in my career, but as someone who stays kind, grounded, and purpose-driven. I want to build a meaningful life using my skills in IT while never losing the joy I find in music, creativity, and genuine connections with the people I care about.<br><br>
+    <b>Goals In Life / Dream:</b> My dream is to become successful, not just in my career, but as someone who stays kind, grounded, and purpose-driven. I want to build a meaningful life using my skills in IT while never losing the joy I find in music, creativity, and genuine connections with the people I care about.<br><br>
 
-    <strong>Picture Gallery</strong><br>
-    <img src="blob:https://www.messenger.com/6d1dc924-9d96-4631-ad8c-bc787491da26" alt="My Photo">
+    <b>Picture Gallery</b><br>
+    <img src="blob:https://www.messenger.com/6d1dc924-9d96-4631-ad8c-bc787491da26" width="300" height="400">
   </p>
 
 </body>
