--- a/Introduction/index.html
+++ b/Introduction/index.html
@@ -1,1 +1,26 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>Page Title</title>
+</head>
+<body>
+
+<h1>Personal Profile Web page</h1>
+<p>
+About Me<br>
+I’m a fun and easygoing person who really enjoys having real, face-to-face conversations with the people closest to me, no phones or gadgets needed! I love deep talks with my family and friends, especially when we share thoughts about the Gospel or even just random everyday stuff. Those moments feel so meaningful, and afterward, it’s like a huge weight has been lifted off my shoulders.
+
+I also love traveling, sipping coffee while enjoying a beautiful view, playing guitar, singing, and drawing. Right now, I’m trying to learn how to dance too! Music is a big part of my life, it keeps me inspired and happy.</br>
+Education / Achievements: With honors<br>
+Course: I’ve been a consistent honors student from Junior High School all the way through Senior High School. Right now, I’m in my second year of college, pursuing a Bachelor of Science in Information Technology (BSIT)</br>
+IT Experience<br>
+Bachelor of Science in Information Technology</br>
+Hobbies & Interests: Guitar, drawing and singing<br>
+Goals In Life / Dream: To become successful<br>
+Picture Gallery<br>
+<img src="https://i.pinimg.com/736x/6b/f5/ab/6bf5ab23b3ae97d323d12d572baf6777.jpg" width="300" height="400">
+</p>
+
+</body>
+</html>
 
