--- a/Introduction/index.html
+++ b/Introduction/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="stylesheet" href="css/flexbox.css">
 <title>Page Title</title>
 </head>
 <body>
@@ -19,6 +20,17 @@ Goals In Life / Dream: My dream is to become successful, not just in my career, 
 Picture Gallery<br>
 <img src="https://i.pinimg.com/736x/6b/f5/ab/6bf5ab23b3ae97d323d12d572baf6777.jpg" width="300" height="400">
 </p>
+<div class="container">
+  <div>1</div>
+  <div>2</div>
+  <div>3</div>  
+  <div>4</div>
+  <div>5</div>
+  <div>6</div>  
+  <div>7</div>
+  <div>8</div>
+  <div>9</div>  
+</div>
 
 </body>
 </html>
