--- a/Introduction/index.html
+++ b/Introduction/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="stylesheet" href="css/mystyle.css">
 <title>Page Title</title>
 </head>
 <body>
@@ -22,5 +23,6 @@ Picture Gallery<br>
 
 </body>
 </html>
+
 
 
