--- a/Introduction/index.html
+++ b/Introduction/index.html
@@ -38,6 +38,19 @@ Picture Gallery<br>
 </div>
 
 
+
+
+body {
+  margin: 0;
+  font-family: Arial;
+}
+
+.header {
+  text-align: center;
+  padding: 32px;
+}
+
+
 <div class="header">
   <h1>Responsive Image Gallery</h1>
   <p>Resize the browser window to see the responsive effect.</p>
@@ -125,8 +138,6 @@ Picture Gallery<br>
     <img src="/w3images/underwater.jpg" style="width:100%">
   </div>
 </div>
-
-
 
 
 </body>
