--- a/Introduction/index.html
+++ b/Introduction/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="css/flexbox.css"?version=0.2>
+<link rel="stylesheet" href="css/flexbox.css">
 <title>Page Title</title>
 </head>
 <body>
@@ -32,28 +32,6 @@ Picture Gallery<br>
 </p>
 
 
-
-
-body {
-  margin: 0;
-  font-family: Arial;
-}
-
-.header {
-  text-align: center;
-  padding: 32px;
-}
-
-
-<div class="header">
-  <h1>Responsive Image Gallery</h1>
-  <p>Resize the browser window to see the responsive effect.</p>
-</div>
-
-
-
-</style>
-<body>
 
 <!-- Header -->
 <div class="header">
