--- a/Introduction/index.html
+++ b/Introduction/index.html
@@ -6,23 +6,26 @@
 </head>
 <body>
 
-<h1> Personal Profile Web page - Raiza Juvida </h1>
+<h1 style="background-color:rgb(97, 65, 0);"> Personal Profile Web page - Raiza Juvida </h1>
 
-<div class="container">
-<div>About Me:<br>
+<p style="background-color:#F5F5DC;"> About Me:<br>
 I’m a fun and easygoing person who really enjoys having real, face-to-face conversations with the people closest to me, no phones or gadgets needed! I love deep talks with my family and friends, especially when we share thoughts about the Gospel or even just random everyday stuff. Those moments feel so meaningful, and afterward, it’s like a huge weight has been lifted off my shoulders.
 
-I also love traveling, sipping coffee while enjoying a beautiful view, playing guitar, singing, and drawing. Right now, I’m trying to learn how to dance too! Music is a big part of my life, it keeps me inspired and happy.</div>
-<div>Education / Achievements:<br>
-- I’ve been a consistent honors student from Junior High School all the way through Senior High School. Right now, I’m in my second year of college, pursuing a Bachelor of Science in Information Technology (BSIT)</div>
-<div>Course:<br>
-Bachelor of Science in Information Technology (BSIT)</div>
-<div>IT Experience:<br>
-As a student, I’ve already started building hands-on experience through class projects, like creating simple websites, basic applications, and troubleshooting software issues. I’ve also joined tech-related school activities and workshops to grow my skills in programming, networking, and problem-solving.</div>
-<div>Hobbies & Interests:<br>
-Guitar, drawing and singing</div>
-<div>Goals In Life / Dream:<br>
-My dream is to become successful, not just in my career, but as someone who stays kind, grounded, and purpose-driven. I want to build a meaningful life using my skills in IT while never losing the joy I find in music, creativity, and genuine connections with the people I care about.</div>
+I also love traveling, sipping coffee while enjoying a beautiful view, playing guitar, singing, and drawing. Right now, I’m trying to learn how to dance too! Music is a big part of my life, it keeps me inspired and happy.</p>
+<p style="background-color:#F5F5DC;">Education / Achievements:<br>
+<li>I’ve been a consistent honors student from Junior High School all the way through Senior High School. Right now, I’m in my second year of college, pursuing a Bachelor of Science in Information Technology (BSIT)</li></p>
+
+<p style="background-color:#F5F5DC;">Course:<br>
+<li>Bachelor of Science in Information Technology (BSIT)</li></p>
+
+<p style="background-color:#F5F5DC;">IT Experience:<br>
+<li>As a student, I’ve already started building hands-on experience through class projects, like creating simple websites, basic applications, and troubleshooting software issues. I’ve also joined tech-related school activities and workshops to grow my skills in programming, networking, and problem-solving.</li></p>
+
+<p style="background-color:#F5F5DC;"></p>Hobbies & Interests:<br>
+<li>Guitar, drawing and singing</li></p>
+
+<p style="background-color:#F5F5DC;">Goals In Life / Dream:<br>
+<li>My dream is to become successful, not just in my career, but as someone who stays kind, grounded, and purpose-driven. I want to build a meaningful life using my skills in IT while never losing the joy I find in music, creativity, and genuine connections with the people I care about.</li></p>
 </div>
 </div>
 
