--- a/Introduction/index.html
+++ b/Introduction/index.html
@@ -1,42 +1,64 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="css/flexbox.css">
-<title>Page Title</title>
+  <title>Personal Profile - Raiza Juvida</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<h1 style="background-color:rgb(97, 65, 0);"> Personal Profile Web page - Raiza Juvida </h1>
 
-<p style="background-color:#F5F5DC;"> About Me:<br>
-I’m a fun and easygoing person who really enjoys having real, face-to-face conversations with the people closest to me, no phones or gadgets needed! I love deep talks with my family and friends, especially when we share thoughts about the Gospel or even just random everyday stuff. Those moments feel so meaningful, and afterward, it’s like a huge weight has been lifted off my shoulders.
-
-I also love traveling, sipping coffee while enjoying a beautiful view, playing guitar, singing, and drawing. Right now, I’m trying to learn how to dance too! Music is a big part of my life, it keeps me inspired and happy.</p>
-<p style="background-color:#F5F5DC;">Education / Achievements:<br>
-<li>I’ve been a consistent honors student from Junior High School all the way through Senior High School. Right now, I’m in my second year of college, pursuing a Bachelor of Science in Information Technology (BSIT)</li></p>
-
-<p style="background-color:#F5F5DC;">Course:<br>
-<li>Bachelor of Science in Information Technology (BSIT)</li></p>
-
-<p style="background-color:#F5F5DC;">IT Experience:<br>
-<li>As a student, I’ve already started building hands-on experience through class projects, like creating simple websites, basic applications, and troubleshooting software issues. I’ve also joined tech-related school activities and workshops to grow my skills in programming, networking, and problem-solving.</li></p>
-
-<p style="background-color:#F5F5DC;"></p>Hobbies & Interests:<br>
-<li>Guitar, drawing and singing</li></p>
-
-<p style="background-color:#F5F5DC;">Goals In Life / Dream:<br>
-<li>My dream is to become successful, not just in my career, but as someone who stays kind, grounded, and purpose-driven. I want to build a meaningful life using my skills in IT while never losing the joy I find in music, creativity, and genuine connections with the people I care about.</li></p>
-</div>
+<div class="header">
+  <h1>Personal Profile Web Page - Raiza Juvida</h1>
 </div>
 
-<p>
-Picture Gallery<br>
-<img src="https://i.pinimg.com/736x/6b/f5/ab/6bf5ab23b3ae97d323d12d572baf6777.jpg" width="300" height="400">
-</p>
+<div class="section hero">
+  <img src="/mnt/data/26b6040c-fe97-42fd-bafa-85bf0bd468a8.png" width="300" height="400">
+  <h2>About Me</h2>
+  <p>
+    I’m a fun and easygoing person who really enjoys having real, face-to-face conversations with the people closest to me. I love deep talks with my family and friends, whether about the Gospel or everyday stories.
+  </p>
+  <p>
+    I also love traveling, sipping coffee with a nice view, playing guitar, singing, drawing, and I’m currently learning how to dance. Music keeps me inspired.
+  </p>
+</div>
 
+<div class="section">
+  <h2>Education / Achievements</h2>
+  <ul>
+    <li>Consistent honors student from JHS to SHS</li>
+    <li>Currently in 2nd year college (BSIT)</li>
+  </ul>
+</div>
+
+<div class="section">
+  <h2>Course</h2>
+  <ul>
+    <li>Bachelor of Science in Information Technology (BSIT)</li>
+  </ul>
+</div>
+
+<div class="section">
+  <h2>IT Experience</h2>
+  <ul>
+    <li>Experience creating websites, basic apps, troubleshooting software</li>
+    <li>Joined workshops and tech activities</li>
+  </ul>
+</div>
+
+<div class="section">
+  <h2>Hobbies & Interests</h2>
+  <ul>
+    <li>Guitar, drawing, singing</li>
+  </ul>
+</div>
+
+<div class="section">
+  <h2>Goals in Life / Dream</h2>
+  <ul>
+    <li>To succeed in IT while staying grounded and purpose-driven</li>
+    <li>To build a meaningful life filled with creativity, music, and real connections</li>
+  </ul>
+</div>
 
 </body>
 </html>
-
-
-
