--- a/Introduction/index.html
+++ b/Introduction/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Personal Profile - Raiza Juvida</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/flexbox.css"?version=0.2>
 </head>
 <body>
 
