--- a/Introduction/index.html
+++ b/Introduction/index.html
@@ -12,66 +12,55 @@
   <h1>Personal Profile Web Page - Raiza Juvida</h1>
 </div>
 
-<div class="section hero">
-    <h2>About Me</h2>
-  <img src="https://i.pinimg.com/736x/c2/dc/98/c2dc9805037622f8f9b7d49fc7f93b84.jpg" width="600" height="450">
-  <p>
-    I’m a fun and easygoing person who really enjoys having real, face-to-face conversations with the people closest to me. I love deep talks with my family and friends, whether about the Gospel or everyday stories.
-  </p>
-  <p>
-    I also love traveling, sipping coffee with a nice view, playing guitar, singing, drawing, and I’m currently learning how to dance. Music keeps me inspired.
-  </p>
-</div>
-
-<div class="section">
-  <h2>Education / Achievements</h2>
-  <ul>
-    <li>Consistent honors student from JHS to SHS</li>
-    <li>Currently in 2nd year college (BSIT)</li>
-  </ul>
-</div>
-
-<div class="section">
-  <h2>Course</h2>
-  <ul>
-    <li>Bachelor of Science in Information Technology (BSIT)</li>
-  </ul>
-</div>
-
-<div class="section">
-  <h2>IT Experience</h2>
-  <ul>
-    <li>Experience creating websites, basic apps, troubleshooting software</li>
-    <li>Joined workshops and tech activities</li>
-  </ul>
-</div>
-
-<div class="section">
-  <h2>Hobbies & Interests</h2>
-  <ul>
-    <li>Guitar, drawing, singing</li>
-  </ul>
-</div>
-
-<div class="section">
-  <h2>Goals in Life / Dream</h2>
-  <ul>
-    <li>To succeed in IT while staying grounded and purpose-driven</li>
-    <li>To build a meaningful life filled with creativity, music, and real connections</li>
-  </ul>
-</div>
-
-
 <div class="container">
-  <div>1</div>
-  <div>2</div>
-  <div>3</div>  
-  <div>4</div>
-  <div>5</div>
-  <div>6</div>  
+  <div class="item about">
+    <h2>About Me</h2>
+    <p>I’m a fun and easygoing person who really enjoys having real, face-to-face conversations with the people closest to me. I love deep talks with my family and friends, whether about the Gospel or everyday stories.</p>
+    <p>I also love traveling, sipping coffee with a nice view, playing guitar, singing, drawing, and I’m currently learning how to dance. Music keeps me inspired.</p>
+  </div>
+
+  <div class="item edu">
+    <h2>Education / Achievements</h2>
+    <ul>
+      <li>Consistent honors student from JHS to SHS</li>
+      <li>Currently in 2nd year college (BSIT)</li>
+    </ul>
+  </div>
+
+  <div class="item course">
+    <h2>Course</h2>
+    <ul>
+      <li>Bachelor of Science in Information Technology (BSIT)</li>
+    </ul>
+  </div>
+
+  <div class="item exp">
+    <h2>IT Experience</h2>
+    <ul>
+      <li>Experience creating websites, basic apps, troubleshooting software</li>
+      <li>Joined workshops and tech activities</li>
+    </ul>
+  </div>
+
+  <div class="item hobbies">
+    <h2>Hobbies & Interests</h2>
+    <ul>
+      <li>Guitar, drawing, singing</li>
+    </ul>
+  </div>
+
+  <div class="item goals">
+    <h2>Goals in Life / Dream</h2>
+    <ul>
+      <li>To succeed in IT while staying grounded and purpose-driven</li>
+      <li>To build a meaningful life filled with creativity, music, and real connections</li>
+    </ul>
+  </div>
 </div>
+
 
 
 </body>
 </html>
+
 
