Added rwd css sample

--- a/Introduction/index.html
+++ b/Introduction/index.html
@@ -1,24 +1,99 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/rwd.css">
+  <title>Personal Profile - Raiza Juvida</title>
+  <link rel="stylesheet" href="css/flexbox.css"?version=0.2>
 </head>
 <body>
 
-<h1>Personal Profile Web page</h1>
-<p>
-About Me<br>
-I’m a fun and easygoing person who really enjoys having real, face-to-face conversations with the people closest to me, no phones or gadgets needed! I love deep talks with my family and friends, especially when we share thoughts about the Gospel or even just random everyday stuff. Those moments feel so meaningful, and afterward, it’s like a huge weight has been lifted off my shoulders.
 
-I also love traveling, sipping coffee while enjoying a beautiful view, playing guitar, singing, and drawing. Right now, I’m trying to learn how to dance too! Music is a big part of my life, it keeps me inspired and happy.</br>
-Education / Achievements: I’ve been a consistent honors student from Junior High School all the way through Senior High School. Right now, I’m in my second year of college, pursuing a Bachelor of Science in Information Technology (BSIT)<br>
-Course: Bachelor of Science in Information Technology (BSIT)<br>
-IT Experience: As a student, I’ve already started building hands-on experience through class projects, like creating simple websites, basic applications, and troubleshooting software issues. I’ve also joined tech-related school activities and workshops to grow my skills in programming, networking, and problem-solving.<br>
-Hobbies & Interests: Guitar, drawing and singing<br>
-Goals In Life / Dream: My dream is to become successful, not just in my career, but as someone who stays kind, grounded, and purpose-driven. I want to build a meaningful life using my skills in IT while never losing the joy I find in music, creativity, and genuine connections with the people I care about.<br>
-Picture Gallery<br>
-<img src="https://i.pinimg.com/736x/6b/f5/ab/6bf5ab23b3ae97d323d12d572baf6777.jpg" width="300" height="400">
-</p>
+<div class="header">
+  <h1>Personal Profile Web Page - Raiza Juvida</h1>
+</div>
+
+<div class="container">
+  <div class="item about">
+    <h2>About Me</h2>
+    <p>I’m a fun and easygoing person who really enjoys having real, face-to-face conversations with the people closest to me. I love deep talks with my family and friends, whether about the Gospel or everyday stories.</p>
+    <p>I also love traveling, sipping coffee with a nice view, playing guitar, singing, drawing, and I’m currently learning how to dance. Music keeps me inspired.</p>
+  </div>
+
+  <div class="item edu">
+    <h2>Education / Achievements</h2>
+    <ul>
+      <li>Consistent honors student from JHS to SHS</li>
+      <li>Currently in 2nd year college (BSIT)</li>
+    </ul>
+  </div>
+
+  <div class="item course">
+    <h2>Course</h2>
+    <ul>
+      <li>Bachelor of Science in Information Technology (BSIT)</li>
+    </ul>
+  </div>
+
+  <div class="item exp">
+    <h2>IT Experience</h2>
+    <ul>
+      <li>Experience creating websites, basic apps, troubleshooting software</li>
+      <li>Joined workshops and tech activities</li>
+    </ul>
+  </div>
+
+  <div class="item hobbies">
+    <h2>Hobbies & Interests</h2>
+    <ul>
+      <li>Guitar, drawing, singing</li>
+    </ul>
+  </div>
+
+  <div class="item goals">
+    <h2>Goals in Life / Dream</h2>
+    <ul>
+      <li>To succeed in IT while staying grounded and purpose-driven</li>
+      <li>To build a meaningful life filled with creativity, music, and real connections</li>
+    </ul>
+  </div>
+</div>
+
+
+
+
+<div class="grid-container">
+ 
+<div class="header"><h1>Chania</h1></div>
+ 
+<div class="menu">
+<ul>
+<li>The Flight</li>
+<li>The City</li>
+<li>The Island</li>
+<li>The Food</li>
+</ul>
+</div>
+ 
+<div class="content">
+<h1>The City</h1>
+<p>Chania is the capital of the Chania region on the island of Crete.</p>
+<p>The city can be divided in two parts, the old town and the modern city. The old town is situated next to the old harbour and is the matrix around which the whole urban area was developed.</p>
+<p>Chania lies along the north west coast of the island Crete.</p>
+</div>  
+ 
+<div class="facts">
+<h2>Facts:</h2>
+<ul>
+<li>Chania is a city on the island of Crete</li>
+<li>Crete is a Greek island in the Mediterranean Sea</li>
+</ul>
+</div>
+ 
+<div class="footer"><p>Resize the browser window to see the responsive effect.</p></div>
+</div>
+
+
 
 </body>
 </html>
