Add image to About Me section in index.html
Added an image to the 'About Me' section and preserved existing content.

--- a/Introduction/index.html
+++ b/Introduction/index.html
@@ -15,6 +15,7 @@
 <div class="container">
   <div class="item about">
     <h2>About Me</h2>
+        <img src="https://i.pinimg.com/736x/c2/dc/98/c2dc9805037622f8f9b7d49fc7f93b84.jpg" width="600" height="450">
     <p>I’m a fun and easygoing person who really enjoys having real, face-to-face conversations with the people closest to me. I love deep talks with my family and friends, whether about the Gospel or everyday stories.</p>
     <p>I also love traveling, sipping coffee with a nice view, playing guitar, singing, drawing, and I’m currently learning how to dance. Music keeps me inspired.</p>
   </div>
@@ -62,5 +63,6 @@
 
 </body>
 </html>
+
 
 
