--- a/Introduction/index.html
+++ b/Introduction/index.html
@@ -47,12 +47,12 @@
 
     .navbar-custom .nav-link, 
     .navbar-custom .navbar-brand {
-      color: #fff !important;
+      color: #fff;
       font-size: 18px;
     }
 
     .navbar-custom .nav-link:hover {
-      color: #ffe9c6 !important;
+      color: #ffe9c6;
     }
 
     .footer {
@@ -187,3 +187,4 @@
 
 </body>
 </html>
+
